--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -18,7 +18,7 @@
             <h5>Address</h5>
             <address>Midwest Surface Supply<br>2415 Industrial Drive<br>Madison, WI 53713</address>
           </div>
-         
+
           <div class="col-md-4 col-sm-6">
             <h5>Call</h5>
             <p><abbr title="Phone">P:</abbr> (844) 634-2648</p>
@@ -35,8 +35,8 @@
   <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/js/bootstrap.min.js" integrity="sha384-h0AbiXch4ZDo7tp9hKZ4TsHbi047NrKGLO3SEJAg45jXxnGIfYzk4Si90RDIqNm1" crossorigin="anonymous"></script>
-  <script type="text/javascript" src="/js/parallax.min.js"></script>
+  <script type="text/javascript" src="js/parallax.min.js"></script>
 
-  <script type="text/javascript" src="/js/my.js"></script>
+  <script type="text/javascript" src="js/my.js"></script>
 
 </footer>
