--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
 	<div class="container">
 		<a class="navbar-brand" href="/">
-	  		<img src="/images/header/mss.svg" width="240" alt="Midwest Surface Supply">
+	  		<img src="images/header/mss.svg" width="240" alt="Midwest Surface Supply">
 		</a>
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,7 +23,7 @@
 		         <li class="nav-item active">
 		           <a class="nav-link" href="{{ nav.url }}">{{ nav.title }}</a>
 		         </li>
-		      {% else %} 
+		      {% else %}
 		        <li class="nav-item">
 		          <a class="nav-link" href="{{ site.url }}{{ nav.href }}">{{ nav.title }}</a>
 		        </li>
@@ -34,5 +34,5 @@
 	</div>
 </nav>
 
-<!-- 
+<!--
  -->
