--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,10 +3,10 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
-  <link rel="manifest" href="manifest.json">
-  <link rel="mask-icon" href="safari-pinned-tab.svg" color="#5bbad5">
+  <link rel="icon" type="image/png" sizes="32x32" href="https://ajwahlb.github.io/midwestsurfacesupply/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="https://ajwahlb.github.io/midwestsurfacesupply/favicon-16x16.png">
+  <link rel="manifest" href="https://ajwahlb.github.io/midwestsurfacesupply/manifest.json">
+  <link rel="mask-icon" href="https://ajwahlb.github.io/midwestsurfacesupply/safari-pinned-tab.svg" color="#5bbad5">
   <meta name="theme-color" content="#ffffff">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
   <link rel="alternate" type="application/rss+xml" title="{{ site.title | escape }}" href="{{ "/feed.xml" | relative_url }}">
@@ -15,6 +15,6 @@
   {% endif %}
 
   <!-- custom css -->
-  <link rel="stylesheet" type="text/css" href="{{ "css/main.css" | relative_url  }}">
+  <link rel="stylesheet" type="text/css" href="{{ "https://ajwahlb.github.io/midwestsurfacesupply/css/main.css" | relative_url  }}">
 
 </head>
