--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light">
 	<div class="container">
-		<a class="navbar-brand" href="/">
-	  		<img src="images/header/mss.svg" width="240" alt="Midwest Surface Supply">
+		<a class="navbar-brand" href="https://ajwahlb.github.io/midwestsurfacesupply/">
+	  		<img src="https://ajwahlb.github.io/midwestsurfacesupply/images/header/mss.svg" width="240" alt="Midwest Surface Supply">
 		</a>
 
 		<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
