update css path
updated css path in head

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -15,6 +15,6 @@
   {% endif %}
 
   <!-- custom css -->
-  <link rel="stylesheet" type="text/css" href="{{ "https://ajwahlb.github.io/midwestsurfacesupply/css/main.css" | relative_url  }}">
+  <link rel="stylesheet" type="text/css" href="https://ajwahlb.github.io/midwestsurfacesupply/css/main.css">
 
 </head>
